styles/scss/components/slideshow.scss
.image-slider{
    //display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 50px;
    .slideshow-container{
        .slideshow{
            margin: 0 auto;
            .slideshow-list{
                .slide{
                    img{
                        width: 100%;
                        height: auto;
                    }
                }
            }
        }
    }
}

#mobile-slideshow{
    display: none;
}

#mobile-slideshow{
    li{
        div{
            position: absolute;
            display: inline-block;
        }
    }

    .first-slide{
        background-position: right !important; //Overwriting splide.js style

        div{
            top: 50%;
            left: 5%;

            @media screen and (min-width: 420px) {
                left: 15%;
            }

            @media screen and (min-width: 500px) {
                left: 30%;
            }

            @media screen and (min-width: 600px) {
                left: 40%;
            }

            @media screen and (min-width: 720px) {
                left: 50%;
            }

            @media screen and (min-width: 900px) {
                left: 55%;
            }
        }
    }

    .second-slide{
        background-position: left !important;

        div{
            top: 60%;
            left: 35%;

            @media screen and (min-width: 530px) {
                left: 25%;
            }

            @media screen and (min-width: 750px) {
                left: 20%;
            }

            p{
                text-align: right;
            }
        }
    }

    .third-slide{
        background-position: left !important;

        div{
            top: 30%;
            left: 45%;

            @media screen and (min-width: 570px) {
                left: 35%;
            }

            @media screen and (min-width: 830px) {
                left: 30%;
            }
        
            p{
                text-align: right;
            }
        }
    }

    .fourth-slide{
        div{
            top: 20%;
            left: 15%;

            @media screen and (min-width: 900px) {
                left: 20%;
            }
        }
    }
}

.slideshow{
    li{
        div{
            position: absolute;
            display: inline-block;

            p{
                color: white;
            }
        }
    }

    .first-slide{
        div{
            top: 234px;
            left: 373px;
        }
    }

    .second-slide{
        div{
            top: 274px;
            left: 116px;

            p{
                text-align: right;
            }
        }
    }

    .third-slide{
        div{
            top: 170px;
            left: 224px;
        
            p{
                text-align: right;
            }
        }
    }

    .fourth-slide{
        div{
            top: 100px;
            left: 112px;
        }
    }
}

#slideshow{
    li{
        div{
            bottom: 35px;
            right: 35px;

            p{
                font-size: 56px;
                color: white;
            }
        }
    }
}

